# DynamycArrayLabC

./: CMakeLists.txt  main.c
lib/: debug.h  dynamic_array.h  error.h  test.h
lib/src/: debug.c  dynamic_array.c  error.c  test.c
